--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # In real-world scenarios, you would not commit this file to version control.
-VITE_API_URL=https://tikal-home-assignment.vercel.app/api
+VITE_API_URL=https://tikal-home-assignment.vercel.app
